--- a/soar/result/1661160897.html
+++ b/soar/result/1661160897.html
@@ -27,178 +27,14 @@ a:link,a:visited{text-decoration:none}h3,h4{margin-top:2em}h5,h6{margin-top:20px
 </head>
 <body onload=load()>
 
-<h1>Query: F9B7827AC4C4D787</h1>
+<h1>Query: F3C50E8EFBEF5290</h1>
 
-<p>★ ★ ★ ☆ ☆ 75分</p>
+<p>☆ ☆ ☆ ☆ ☆ 0分</p>
 
-<pre><code class="language-sql">SELECT * FROM `users` ORDER BY name DESC
+<pre><code class="language-sql">se111111111111111
 </code></pre>
 
-<h2>Explain信息</h2>
+<h2>MySQL execute failed</h2>
 
-<table>
-<thead>
-<tr>
-<th>id</th>
-<th>select_type</th>
-<th>table</th>
-<th>partitions</th>
-<th>type</th>
-<th>possible_keys</th>
-<th>key</th>
-<th>key_len</th>
-<th>ref</th>
-<th>rows</th>
-<th>filtered</th>
-<th>scalability</th>
-<th>Extra</th>
-</tr>
-</thead>
-
-<tbody>
-<tr>
-<td>1</td>
-<td>SIMPLE</td>
-<td><em>users</em></td>
-<td>NULL</td>
-<td>ALL</td>
-<td>NULL</td>
-<td>NULL</td>
-<td>NULL</td>
-<td>NULL</td>
-<td>2</td>
-<td>☠️ <strong>100.00%</strong></td>
-<td>☠️ <strong>O(n)</strong></td>
-<td>Using filesort</td>
-</tr>
-</tbody>
-</table>
-
-<h3>Explain信息解读</h3>
-
-<h4>SelectType信息解读</h4>
-
-<ul>
-<li><strong>SIMPLE</strong>: 简单SELECT(不使用UNION或子查询等).</li>
-</ul>
-
-<h4>Type信息解读</h4>
-
-<ul>
-<li>☠️ <strong>ALL</strong>: 最坏的情况, 从头到尾全表扫描.</li>
-</ul>
-
-<h4>Extra信息解读</h4>
-
-<ul>
-<li>☠️ <strong>Using filesort</strong>: MySQL会对结果使用一个外部索引排序,而不是从表里按照索引次序读到相关内容. 可能在内存或者磁盘上进行排序. MySQL中无法利用索引完成的排序操作称为'文件排序'.</li>
-</ul>
-
-<h2>Profiling信息</h2>
-
-<table>
-<thead>
-<tr>
-<th>Status</th>
-<th>Duration</th>
-</tr>
-</thead>
-
-<tbody>
-<tr>
-<td>starting</td>
-<td>0.000079</td>
-</tr>
-
-<tr>
-<td>checking permissions</td>
-<td>0.000008</td>
-</tr>
-
-<tr>
-<td>Opening tables</td>
-<td>0.000497</td>
-</tr>
-
-<tr>
-<td>init</td>
-<td>0.000023</td>
-</tr>
-
-<tr>
-<td>System lock</td>
-<td>0.000010</td>
-</tr>
-
-<tr>
-<td>optimizing</td>
-<td>0.000008</td>
-</tr>
-
-<tr>
-<td>statistics</td>
-<td>0.000020</td>
-</tr>
-
-<tr>
-<td>preparing</td>
-<td>0.000032</td>
-</tr>
-
-<tr>
-<td>executing</td>
-<td>0.000049</td>
-</tr>
-
-<tr>
-<td>end</td>
-<td>0.000007</td>
-</tr>
-
-<tr>
-<td>query end</td>
-<td>0.000008</td>
-</tr>
-
-<tr>
-<td>waiting for handler commit</td>
-<td>0.000011</td>
-</tr>
-
-<tr>
-<td>closing tables</td>
-<td>0.000026</td>
-</tr>
-
-<tr>
-<td>freeing items</td>
-<td>0.000052</td>
-</tr>
-
-<tr>
-<td>cleaning up</td>
-<td>0.000048</td>
-</tr>
-</tbody>
-</table>
-
-<h2>最外层 SELECT 未指定 WHERE 条件</h2>
-
-<ul>
-<li><p><strong>Item:</strong>  CLA.001</p></li>
-
-<li><p><strong>Severity:</strong>  L4</p></li>
-
-<li><p><strong>Content:</strong>  SELECT 语句没有 WHERE 子句，可能检查比预期更多的行(全表扫描)。对于 SELECT COUNT(*) 类型的请求如果不要求精度，建议使用 SHOW TABLE STATUS 或 EXPLAIN 替代。</p></li>
-</ul>
-
-<h2>不建议使用 SELECT * 类型查询</h2>
-
-<ul>
-<li><p><strong>Item:</strong>  COL.001</p></li>
-
-<li><p><strong>Severity:</strong>  L1</p></li>
-
-<li><p><strong>Content:</strong>  当表结构变更时，使用 * 通配符选择所有列将导致查询的含义和行为会发生更改，可能导致查询返回更多的数据。</p></li>
-</ul>
+<p>line 1 column 17 near &quot;se111111111111111&quot; (total length 17)</p>
 
