--- a/soar/result/1661162543.html
+++ b/soar/result/1661162543.html
@@ -27,341 +27,14 @@ a:link,a:visited{text-decoration:none}h3,h4{margin-top:2em}h5,h6{margin-top:20px
 </head>
 <body onload=load()>
 
-<h1>Query: 30AFCB1E1344BEBD</h1>
+<h1>Query: F3C50E8EFBEF5290</h1>
 
-<p>★ ★ ★ ☆ ☆ 75分</p>
+<p>☆ ☆ ☆ ☆ ☆ 0分</p>
 
-<pre><code class="language-sql">select * from users
+<pre><code class="language-sql">se111111111111111
 </code></pre>
 
-<h2>Explain信息</h2>
+<h2>MySQL execute failed</h2>
 
-<table>
-<thead>
-<tr>
-<th>id</th>
-<th>select_type</th>
-<th>table</th>
-<th>partitions</th>
-<th>type</th>
-<th>possible_keys</th>
-<th>key</th>
-<th>key_len</th>
-<th>ref</th>
-<th>rows</th>
-<th>filtered</th>
-<th>scalability</th>
-<th>Extra</th>
-</tr>
-</thead>
-
-<tbody>
-<tr>
-<td>1</td>
-<td>SIMPLE</td>
-<td><em>users</em></td>
-<td>NULL</td>
-<td>ALL</td>
-<td>NULL</td>
-<td>NULL</td>
-<td>NULL</td>
-<td>NULL</td>
-<td>2</td>
-<td>☠️ <strong>100.00%</strong></td>
-<td>☠️ <strong>O(n)</strong></td>
-<td>NULL</td>
-</tr>
-</tbody>
-</table>
-
-<h3>Explain信息解读</h3>
-
-<h4>SelectType信息解读</h4>
-
-<ul>
-<li><strong>SIMPLE</strong>: 简单SELECT(不使用UNION或子查询等).</li>
-</ul>
-
-<h4>Type信息解读</h4>
-
-<ul>
-<li>☠️ <strong>ALL</strong>: 最坏的情况, 从头到尾全表扫描.</li>
-</ul>
-
-<h2>Profiling信息</h2>
-
-<table>
-<thead>
-<tr>
-<th>Status</th>
-<th>Duration</th>
-</tr>
-</thead>
-
-<tbody>
-<tr>
-<td>starting</td>
-<td>0.000086</td>
-</tr>
-
-<tr>
-<td>checking permissions</td>
-<td>0.000011</td>
-</tr>
-
-<tr>
-<td>Opening tables</td>
-<td>0.000932</td>
-</tr>
-
-<tr>
-<td>init</td>
-<td>0.000013</td>
-</tr>
-
-<tr>
-<td>System lock</td>
-<td>0.000008</td>
-</tr>
-
-<tr>
-<td>optimizing</td>
-<td>0.000007</td>
-</tr>
-
-<tr>
-<td>statistics</td>
-<td>0.000029</td>
-</tr>
-
-<tr>
-<td>preparing</td>
-<td>0.000019</td>
-</tr>
-
-<tr>
-<td>executing</td>
-<td>0.000022</td>
-</tr>
-
-<tr>
-<td>end</td>
-<td>0.000005</td>
-</tr>
-
-<tr>
-<td>query end</td>
-<td>0.000005</td>
-</tr>
-
-<tr>
-<td>waiting for handler commit</td>
-<td>0.000008</td>
-</tr>
-
-<tr>
-<td>closing tables</td>
-<td>0.000021</td>
-</tr>
-
-<tr>
-<td>freeing items</td>
-<td>0.000042</td>
-</tr>
-
-<tr>
-<td>cleaning up</td>
-<td>0.000035</td>
-</tr>
-</tbody>
-</table>
-
-<h2>最外层 SELECT 未指定 WHERE 条件</h2>
-
-<ul>
-<li><p><strong>Item:</strong>  CLA.001</p></li>
-
-<li><p><strong>Severity:</strong>  L4</p></li>
-
-<li><p><strong>Content:</strong>  SELECT 语句没有 WHERE 子句，可能检查比预期更多的行(全表扫描)。对于 SELECT COUNT(*) 类型的请求如果不要求精度，建议使用 SHOW TABLE STATUS 或 EXPLAIN 替代。</p></li>
-</ul>
-
-<h2>不建议使用 SELECT * 类型查询</h2>
-
-<ul>
-<li><p><strong>Item:</strong>  COL.001</p></li>
-
-<li><p><strong>Severity:</strong>  L1</p></li>
-
-<li><p><strong>Content:</strong>  当表结构变更时，使用 * 通配符选择所有列将导致查询的含义和行为会发生更改，可能导致查询返回更多的数据。</p></li>
-</ul>
-
-<h1>Query: 93BB323D4D166495</h1>
-
-<p>★ ★ ★ ★ ☆ 85分</p>
-
-<pre><code class="language-sql">select * from users where name ='1' order by name desc
-</code></pre>
-
-<h2>Explain信息</h2>
-
-<table>
-<thead>
-<tr>
-<th>id</th>
-<th>select_type</th>
-<th>table</th>
-<th>partitions</th>
-<th>type</th>
-<th>possible_keys</th>
-<th>key</th>
-<th>key_len</th>
-<th>ref</th>
-<th>rows</th>
-<th>filtered</th>
-<th>scalability</th>
-<th>Extra</th>
-</tr>
-</thead>
-
-<tbody>
-<tr>
-<td>1</td>
-<td>SIMPLE</td>
-<td><em>users</em></td>
-<td>NULL</td>
-<td>ref</td>
-<td>idx_name,<br>idx_name_address</td>
-<td>idx_name</td>
-<td>1021</td>
-<td>const</td>
-<td>1</td>
-<td>☠️ <strong>100.00%</strong></td>
-<td>☠️ <strong>O(n)</strong></td>
-<td>NULL</td>
-</tr>
-</tbody>
-</table>
-
-<h3>Explain信息解读</h3>
-
-<h4>SelectType信息解读</h4>
-
-<ul>
-<li><strong>SIMPLE</strong>: 简单SELECT(不使用UNION或子查询等).</li>
-</ul>
-
-<h4>Type信息解读</h4>
-
-<ul>
-<li><strong>ref</strong>: 连接不能基于关键字选择单个行, 可能查找到多个符合条件的行. 叫做ref是因为索引要跟某个参考值相比较. 这个参考值或者是一个数, 或者是来自一个表里的多表查询的结果值. 例:'SELECT * FROM tbl WHERE idx_col=expr;'.</li>
-</ul>
-
-<h2>Profiling信息</h2>
-
-<table>
-<thead>
-<tr>
-<th>Status</th>
-<th>Duration</th>
-</tr>
-</thead>
-
-<tbody>
-<tr>
-<td>starting</td>
-<td>0.000083</td>
-</tr>
-
-<tr>
-<td>checking permissions</td>
-<td>0.000010</td>
-</tr>
-
-<tr>
-<td>Opening tables</td>
-<td>0.000045</td>
-</tr>
-
-<tr>
-<td>init</td>
-<td>0.000007</td>
-</tr>
-
-<tr>
-<td>System lock</td>
-<td>0.000011</td>
-</tr>
-
-<tr>
-<td>optimizing</td>
-<td>0.000015</td>
-</tr>
-
-<tr>
-<td>statistics</td>
-<td>0.000073</td>
-</tr>
-
-<tr>
-<td>preparing</td>
-<td>0.000027</td>
-</tr>
-
-<tr>
-<td>executing</td>
-<td>0.000024</td>
-</tr>
-
-<tr>
-<td>end</td>
-<td>0.000006</td>
-</tr>
-
-<tr>
-<td>query end</td>
-<td>0.000006</td>
-</tr>
-
-<tr>
-<td>waiting for handler commit</td>
-<td>0.000009</td>
-</tr>
-
-<tr>
-<td>closing tables</td>
-<td>0.000012</td>
-</tr>
-
-<tr>
-<td>freeing items</td>
-<td>0.000045</td>
-</tr>
-
-<tr>
-<td>cleaning up</td>
-<td>0.000042</td>
-</tr>
-</tbody>
-</table>
-
-<h2>ORDER BY 常数列没有任何意义</h2>
-
-<ul>
-<li><p><strong>Item:</strong>  CLA.005</p></li>
-
-<li><p><strong>Severity:</strong>  L2</p></li>
-
-<li><p><strong>Content:</strong>  SQL 逻辑上可能存在错误; 最多只是一个无用的操作，不会更改查询结果。</p></li>
-</ul>
-
-<h2>不建议使用 SELECT * 类型查询</h2>
-
-<ul>
-<li><p><strong>Item:</strong>  COL.001</p></li>
-
-<li><p><strong>Severity:</strong>  L1</p></li>
-
-<li><p><strong>Content:</strong>  当表结构变更时，使用 * 通配符选择所有列将导致查询的含义和行为会发生更改，可能导致查询返回更多的数据。</p></li>
-</ul>
+<p>line 1 column 17 near &quot;se111111111111111&quot; (total length 17)</p>
 
