--- a/html/file.html
+++ b/html/file.html
@@ -6,9 +6,6 @@
   <title>GO-SOAR</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <link rel='stylesheet' type='text/css' media='screen' href='/resources/css/bootstrap.min.css'>
-  <script src='/resources/js/bootstrap.min.js'></script>
-  <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js">
-  </script>
 </head>
 <body>
   <ul class="nav nav-pills">
@@ -16,10 +13,11 @@
     <li role="presentation" class="active"><a href="/file">文件</a></li>
   </ul>
   <div>
-    <form>
+    <form class="upForm" method="post" action="v1/soar/sql">
     <div class="form-group">
       <label for="exampleInputFile">上传文件</label>
       <input type="file" id="exampleInputFile" name="sql_file">
+      <input name="tag" value="1" hidden>
       <p class="help-block">注意：请上传 .sql 文件.</p>
     </div>
     <button type="submit" class="btn btn-default">提交</button>
@@ -27,4 +25,3 @@
   </div>
 </body>
 </html>
-
